# luxor

./: .gitignore  Anchor.toml  Program  README.md  Whitepaper.md  audit_aggressive.js  audit_master.js  deep_scan.ts  deep_scan_efficient.js  find_largest.js  full_audit.js  robust_scan.ts
_organized/: 00_START_HERE.md  ARCHIVOS_FUERA_ORGANIZED.md  COMIENZA_AQUI_ES.md  DETALLES_TOKEN_LUXOR_LXR.md  EXPLICACION_TECNICA_VAULT_COSTOS.md  INSTRUCCIONES_EJECUCION_AHORA.md  MAINNET_DEPLOYMENT_STATUS.md  MAINNET_vs_DEVNET_COMPARISON.md  MASTER_STRUCTURE.md  NETWORK_ARCHITECTURE.md  ONE_PAGE_SUMMARY.md  PLAN_LANZAMIENTO_ANTIBOT_LXR.md  PLAN_MAESTRO_LANZAMIENTO_FINAL.md  QUICK_START.md  README_STRUCTURE.md  REORGANIZACIÓN_COMPLETADA.md  RESUMEN_EJECUTIVO_LANZAMIENTO.md  RIESGOS_HUMANOS_Y_MERCADO_LXR.md  SQUAD_MULTISIG_GUIDE.md  SQUAD_VOTACION_AHORA.md  START_HERE_MASTER.md  VERIFIED_MAINNET_STATE.md  WALLET_STATUS_REPORT.md  WHAT_IS_WHERE.md
app/: package.json
landing-page/: .gitignore  middleware.ts  next-sitemap.config.js  package.json
programs/excelsior/: Cargo.toml
programs/excelsior/docs/: manual_operations.md  project_details.md  wallets.md
programs/excelsior/src/: lib.rs
programs/excelsior/src/instructions/: access_control.rs  config_management.rs  distribution.rs  fees.rs  inflation.rs  init_ix.rs  mod.rs  oracle_utils.rs  rewards.rs  stake.rs  swap.rs  usdx_ops.rs  vesting.rs  withdrawals.rs
programs/excelsior/src/state/: access_control.rs  config.rs  mod.rs  security.rs  user_account.rs  vesting.rs
scripts/: generate_metadata_base64.ts  mainnet_handover.ts
(+76 files in other folders)
