[package]
name = "excelsior"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "excelsior"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["metadata", "token_2022"] }
solana-program = "2.1.0"
blake3 = "=1.5.5"
pyth-sdk-solana = "0.10.0"
chainlink_solana = "2.0.8"


